# treepeat

./: .claude.md  .gitignore  .nvimrc  .pre-commit-config.yaml  BENCHMARK_COMPARISON.md  BENCHMARK_REPORT.md  IMPROVEMENT_ANALYSIS.md  Makefile  README.md  REGION_EXTRACTION_ANALYSIS.md  SINGLE_REGION_ISSUE.md  WINDOW_OFFSET_LIMITATION.md  analysis_report.py  analyze_benchmark.py  analyze_duplicates.py  detailed_verification.py  duplicate_analysis_report.md  fixture_analysis.md  pyproject.toml  token_analysis.py  why_missed_analysis.py  why_tools_missed_duplicates.md
.github/scripts/: check_radon.sh
.github/workflows/: ci.yml  testing-framework.yml
benchmark-tests/: .gitignore  ANALYSIS.md  README.md  add_codebase.py  run_tests.py
covey/: cli.py  config.py  diff.py  terminal_detect.py
covey/cli/: __init__.py  cli.py
covey/cli/commands/: detect.py  list_ruleset.py  treesitter.py
covey/formatters/: __init__.py  json.py  sarif.py
covey/models/: __init__.py  shingle.py
covey/pipeline/: __init__.py  auto_chunk_extraction.py  boundary_detection.py  lsh_stage.py  minhash_stage.py  parse.py  pipeline.py  region_extraction.py  rules_factory.py  shingle.py  statistical_chunk_extraction.py  verification.py
covey/pipeline/languages/: base.py  bash.py  css.py  html.py  javascript.py  markdown.py  python.py  sql.py  typescript.py
docs/: perf-harness.md
docs/adr/: 0001-python-project.md  0002-treesitter-detector.md  0003-use-rules.md  0004-hybrid-node-regions.md
docs/plans/: 2026-01-29-jvm-support.md
scripts/: compare_extraction_methods.py
testing-framework/: ANALYSIS.md  CONTRIBUTING_TO_TSSIM.md  INTEGRATION.md  README.md  SUMMARY.md  add_codebase.py  codebases.json  compare_results.py  run_tests.py
testing-framework/duplication-testing/: README.md  codebases.json  run_duplication_tests.py  simple_test_runner.py
tests/: conftest.py  rule_helper.py  test_display.py  test_foo.py  test_rules_factory.py
tests/fixtures/astro/: one.astro  template_only.astro  two.astro
tests/fixtures/bash/: comprehensive.sh  requirements.sh
tests/fixtures/css/: comprehensive-slight-mod.css  comprehensive.css  file_with_shared_block_1.css  file_with_shared_block_2.css
tests/fixtures/go/: comprehensive.go
tests/fixtures/html/: comprehensive.html
tests/fixtures/java/: comprehensive.java
tests/fixtures/javascript/: comprehensive.js  comprehensive.jsx  date_utils.js  renamed_clone.js
tests/fixtures/jsx/: comprehensive.jsx
tests/fixtures/kotlin/: comprehensive.kt
tests/fixtures/markdown/: guide.md  one.md  two.md
tests/fixtures/python/: class_with_methods.py  dataclass1.py  dataclass2.py  dataclass3.py  dataclass4.py  dataclass5.py  dataclass6.py  file_with_duplicate_sections.py  file_with_duplicate_sections_b.py  nested_functions.py  small_functions.py  small_functions_b.py  stats.py
tests/fixtures/rust/: comprehensive.rs
tests/fixtures/sql/: comprehensive.sql
tests/fixtures/tsx/: comprehensive.tsx
tests/fixtures/yaml/: config.yaml
tests/pipeline/: test_ignore.py  test_lsh_stage.py  test_pipeline.py  test_region_extraction.py  test_shingle.py  test_verification.py
tests/pipeline/languages/: __init__.py  test_anonymization.py  test_astro.py  test_bash.py  test_bash_rules.py  test_css.py  test_go.py  test_html.py  test_html_rules.py  test_java.py  test_javascript.py  test_javascript_rules.py  test_jsx.py  test_jsx_rules.py  (+12 more)
tools/perf/: harness.py  perf_repos.toml
treepeat/: config.py  diff.py  terminal_detect.py
treepeat/cli/: cli.py
treepeat/formatters/: __init__.py  json.py  sarif.py
treepeat/models/: __init__.py  normalization.py  shingle.py  similarity.py
treepeat/pipeline/: __init__.py  auto_chunk_extraction.py  lsh_stage.py  minhash_stage.py  parse.py  pipeline.py  region_extraction.py  rules_factory.py  shingle.py  statistical_chunk_extraction.py  verbose_metrics.py  verification.py
tssim/: cli.py  config.py  diff.py  foo.py  terminal_detect.py
tssim/formatters/: __init__.py  json.py  sarif.py
tssim/models/: __init__.py  ast.py  normalization.py  shingle.py  similarity.py
tssim/pipeline/: __init__.py  lsh_stage.py  magic_detector.py  minhash_stage.py  normalize.py  normalizer_factory.py  parse.py  pipeline.py  region_extraction.py  rules_factory.py  shingle.py  verification.py
whorl/: cli.py  config.py  diff.py
whorl/cli/: __init__.py  cli.py
whorl/formatters/: __init__.py  json.py  sarif.py
whorl/models/: __init__.py  shingle.py
whorl/pipeline/: __init__.py  boundary_detection.py  lsh_stage.py  minhash_stage.py  parse.py  pipeline.py  region_extraction.py  rules_factory.py  shingle.py  verification.py
(+62 files in other folders)
